[gd_scene load_steps=2 format=3 uid="uid://bqcxp1vsjqr6n"]

[ext_resource type="Script" path="res://src/ui_new/screens/MarketScreen.gd" id="1"]
[ext_resource type="StyleBox" uid="uid://cwmijfvtxcg4s" path="res://themes/card.tres" id="2"]

[node name="MarketScreen" type="Control"]
script = ExtResource("1")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SellModeContainer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SellPanel" type="VBoxContainer" parent="VBoxContainer/SellModeContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="SellFilters" type="HBoxContainer" parent="VBoxContainer/SellModeContainer/SellPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SellAllButton" type="Button" parent="VBoxContainer/SellModeContainer/SellPanel/SellFilters"]
layout_mode = 2
text = "Vender Todo"

[node name="Spacer" type="Control" parent="VBoxContainer/SellModeContainer/SellPanel/SellFilters"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SellItemsContainer" type="ScrollContainer" parent="VBoxContainer/SellModeContainer/SellPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemsList" type="VBoxContainer" parent="VBoxContainer/SellModeContainer/SellPanel/SellItemsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
